--- a/cms_pro/com_backend/package.json
+++ b/cms_pro/com_backend/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
