--- a/cms_pro/com_backend/package.json
+++ b/cms_pro/com_backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.17.3",
     "mongodb": "^6.20.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
